--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,15 +13,18 @@
         <div class="title-header row row-centered row-vert-centered">
             <h1>Tutorifull</h1>
         </div>
-        <!--
-        <div class="row">
-            <div class="col-12">
-                <div class="title-header-highlight"></div>
-            </div>
-        </div>-->
         <div class="main-content">
             <div class="row">
-                <div class="text-box">Hello and welcome to tutorifull. It would be a better use of time to just write a blurb that is actually final but I'm just wasting time writing this filler text instead. Enjoy!</div>
+                <div class="text-box">
+                    Sometimes you miss out on enrolling in that class that's just
+                    perfect for you: late enough so you don't need 5 cups of coffee
+                    to survive it but early enough so you can still grab a kebab box
+                    from the Quad for lunch right afterwards. <br><br>Or maybe you just
+                    don't like climbing the Basser steps to get to your tute room.<br><br>
+                    With Tutorifull you can sign up to be alerted by email, text
+                    or Yo when a spot opens up in a full class.<br><br>
+                    Never settle for an 8am tute again.
+                </div>
             </div>
 
             <div class="step">
@@ -37,14 +40,11 @@
                 </div>
             </div>
 
-            <div class="icon search-icon"></div>
-            <input class="search-box" type="text" name="coursesearch" placeholder="Search for a course"></input>
-            <ul class="course-search-results">
-                <!--<li class="course-search-result">MEME2007 - Neo-Classical Rare Pepes</li>
-                <li class="course-search-result">MEME2848 - Identifying the Sharpest Tools in Sheds</li>
-                <li class="course-search-result">MEME2977 - Viral Videos and How to Make Them</li>
-                <li class="course-search-result">MEME3899 - Doots Throughout History</li>-->
-            </ul>
+            <div class="search-parent">
+                <div class="icon search-icon"></div>
+                <input class="search-box" type="text" name="coursesearch" placeholder="Search for a course"></input>
+                <ul class="course-search-results"></ul>
+            </div>
 
             <div class="step">
                 <div class="row row-centered">
@@ -60,39 +60,9 @@
             </div>
 
             <div class="class-search-results">
-                <!--<div class="course-classes">
-                    <div class="course-classes-title">MEME2007</div>
-                    <div>
-                        <div class="class-infos row" data-class-id="1">
-                            <div class="class-info class-type">LEC</div>
-                            <div class="class-info class-time">Wed 12-3</div>
-                            <div class="class-info class-location">CLB 7</div>
-                            <div class="class-info class-status">Open</div>
-                            <div class="class-info class-enrolled">127/400</div>
-                        </div>
-                        <div class="class-infos row" data-class-id="2">
-                            <div class="class-info class-type">TUT</div>
-                            <div class="class-info class-time">Thur 9-11</div>
-                            <div class="class-info class-location">MathewsThA</div>
-                            <div class="class-info class-status">Closed</div>
-                            <div class="class-info class-enrolled">22/30</div>
-                        </div>
-                        <div class="class-infos row" data-class-id="3">
-                            <div class="class-info class-type">LAB</div>
-                            <div class="class-info class-time">Mon 18-20</div>
-                            <div class="class-info class-location">Block G15</div>
-                            <div class="class-info class-status">Open</div>
-                            <div class="class-info class-enrolled">25/25</div>
-                        </div>
-                        <div class="class-infos row" data-class-id="4">
-                            <div class="class-info class-type">SEM</div>
-                            <div class="class-info class-time">Tue 12-3</div>
-                            <div class="class-info class-location">Law 203</div>
-                            <div class="class-info class-status">Tentative</div>
-                            <div class="class-info class-enrolled">3/5</div>
-                        </div>
-                    </div>
-                </div>-->
+                <div class="text-box">
+                    Search for a course above
+                </div>
             </div>
 
             <div class="step">
@@ -131,51 +101,9 @@
             </div>
 
             <div class="confirm-classes">
-                <!--<div class="course-classes">
-                    <div class="course-classes-title">MEME2007</div>
-                    <div>
-                        <div class="class-infos row" data-class-id="1">
-                            <div class="class-info class-type">LEC</div>
-                            <div class="class-info class-time">Wed 12-3</div>
-                            <div class="class-info class-location">CLB 7</div>
-                            <div class="class-info class-status">Open</div>
-                            <div class="class-info class-enrolled">127/400</div>
-                        </div>
-                        <div class="class-infos row" data-class-id="2">
-                            <div class="class-info class-type">TUT</div>
-                            <div class="class-info class-time">Thur 9-11</div>
-                            <div class="class-info class-location">MathewsThA</div>
-                            <div class="class-info class-status">Closed</div>
-                            <div class="class-info class-enrolled">22/30</div>
-                        </div>
-                        <div class="class-infos row" data-class-id="3">
-                            <div class="class-info class-type">LAB</div>
-                            <div class="class-info class-time">Mon 18-20</div>
-                            <div class="class-info class-location">Block G15</div>
-                            <div class="class-info class-status">Open</div>
-                            <div class="class-info class-enrolled">25/25</div>
-                        </div>
-                    </div>
+                <div class="text-box">
+                    Select some classes above
                 </div>
-                <div class="course-classes">
-                    <div class="course-classes-title">MEME2848</div>
-                    <div>
-                        <div class="class-infos row" data-class-id="5">
-                            <div class="class-info class-type">LEC</div>
-                            <div class="class-info class-time">Wed 12-3</div>
-                            <div class="class-info class-location">CLB 7</div>
-                            <div class="class-info class-status">Open</div>
-                            <div class="class-info class-enrolled">127/400</div>
-                        </div>
-                        <div class="class-infos row" data-class-id="6">
-                            <div class="class-info class-type">TUT</div>
-                            <div class="class-info class-time">Thur 9-11</div>
-                            <div class="class-info class-location">MathewsThA</div>
-                            <div class="class-info class-status">Closed</div>
-                            <div class="class-info class-enrolled">22/30</div>
-                        </div>
-                    </div>
-                </div>-->
             </div>
             <div class="row row-centered">
                 <input class="alert-me-button" type="submit" name="submit" value="Alert Me"></input>
