--- a/templates/success.html
+++ b/templates/success.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Tutorifull</title>
-  </head>
-  <body>
-    <h1>Tutorifull</h1>
-    <h2>Alerts for enrolling into stuff</h2>
-    <p>We'll send {{ contact_type }} to {{ contact }} when a spot opens up!<p>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+        <link rel="stylesheet" href={{ url_for('static', filename='domework.css') }}>
+        <link rel="stylesheet" href={{ url_for('static', filename='tutorifull.css') }}>
+        <title>Tutorifull</title>
+    </head>
+    <body>
+        <div class="title-header row row-centered row-vert-centered">
+            <h1>Tutorifull</h1>
+        </div>
+        <div class="main-content">
+            <div class="row">
+                <div class="text-box">
+                    We'll send you {{ contact_type }} to {{ contact }} when a spot opens up.
+                </div>
+            </div>
+
+            <div class="confirm-classes success-confirm-classes">
+                {% for course in courses %}
+                    <div class="course-classes">
+                        <div class="course-classes-title">
+                            {{ course.course_id }}
+                        </div>
+                        <div>
+                            {% for class in course.classes %}
+                                <div class="class-infos row selected">
+                                    <div class="class-info class-type">
+                                        {{ class.type }}
+                                    </div>
+                                    <div class="class-info class-time">
+                                        {{ class.day }} {{ class.start_time }}-{{ class.end_time }}
+                                    </div>
+                                    <div class="class-info class-location">
+                                        {{ class.location }}
+                                    </div>
+                                    <div class="class-info class-status">
+                                        {{ class.status }}
+                                    </div>
+                                    <div class="class-info class-enrolled">
+                                        {{ class.enrolled }}/{{ class.capacity }}
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+
+            <footer>
+                <div class="row row-centered">
+                    <div>Made by a Dome</div>
+                </div>
+            </footer>
+        </div>
+    </body>
 </html>
