started using grunt and sass

--- a/templates/success.html
+++ b/templates/success.html
@@ -3,10 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-        <link rel="stylesheet" href={{ url_for('static', filename='domework.css') }}>
-        <link rel="stylesheet" href={{ url_for('static', filename='tutorifull.css') }}>
+        <link rel="stylesheet" href={{ url_for('static', filename='css/tutorifull.min.css') }}>
         <title>Tutorifull</title>
     </head>
     <body>
