--- a/css/tutorifull.scss
+++ b/css/tutorifull.scss
@@ -1,3 +1,10 @@
+@import 'reset';
+@import 'domework';
+
+$font-stack: 'Montserrat', sans-serif;
+$background-color: #e9eaed;
+$text-font-color: #404040;
+
 html {
     height: 100%;
 }
@@ -5,10 +12,10 @@ html {
 body {
     height: 100%;
     margin: 0;
-    background-color: #e9eaed;
-    font-family: 'Montserrat', sans-serif;
+    background-color: $background-color;
+    font-family: $font-stack;
     font-weight: 400;
-    color: #404040;
+    color: $text-font-color;
     line-height: 1.2;
     flex-direction: column;
 }
@@ -68,7 +75,7 @@ caption {
     width: 100%;
     margin-top: 20px;
     padding: 15px;
-    background-color: #ffffff;
+    background-color: white;
     border: 1px solid #dbdee4;
     border-radius: 5px;
 }
@@ -104,7 +111,7 @@ caption {
     z-index: 1;
 }
 .search-icon {
-    background-image: url("search.png");
+    background-image: url("../icons/search.png");
 }
 .search-box {
     width: 100%;
@@ -113,7 +120,7 @@ caption {
     border-radius: 100px;
     border: 1px solid #dbdee4;
     font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font-stack;
 }
 
 .course-search-results {
@@ -251,7 +258,7 @@ caption {
     border-radius: 5px;
     border: 1px solid #dbdee4;
     font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font-stack;
 }
 @media only screen and (min-width:550px) {
     .contact-input-box {
@@ -259,13 +266,13 @@ caption {
     }
 }
 .email-icon {
-    background-image: url("email.png");
+    background-image: url("../icons/email.png");
 }
 .sms-icon {
-    background-image: url("sms.png");
+    background-image: url("../icons/sms.png");
 }
 .yo-icon {
-    background-image: url("yo.png");
+    background-image: url("../icons/yo.png");
 }
 
 .contact-or {
@@ -294,7 +301,7 @@ caption {
     border-radius: 5px;
     border: 1px solid #dbdee4;
     font-size: 16px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font-stack;
     cursor: pointer;
 }
 
