--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,10 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-        <link rel="stylesheet" href={{ url_for('static', filename='domework.css') }}>
-        <link rel="stylesheet" href={{ url_for('static', filename='tutorifull.css') }}>
+        <link rel="stylesheet" href={{ url_for('static', filename='css/tutorifull.min.css') }}>
         <title>Tutorifull</title>
     </head>
     <body>
@@ -122,6 +120,6 @@
                 <div>Made by a Dome</div>
             </div>
         </footer>
-    <script type="text/javascript" src={{ url_for('static', filename='tutorifull.js') }}></script>
+    <script type="text/javascript" src={{ url_for('static', filename='js/tutorifull.min.js') }}></script>
     </body>
 </html>
