sassified the css

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -28,7 +28,7 @@
 </div>
 
 <div class="search-parent">
-    <div class="icon search-icon"></div>
+    <div class="search-icon"></div>
     <input class="search-box" type="text" name="coursesearch" placeholder="Search for a course"></input>
     <ul class="course-search-results"></ul>
 </div>
@@ -66,17 +66,17 @@
 </div>
 
 <div class="row justify-centered">
-    <div class="icon email-icon"></div>
+    <div class="email-icon"></div>
     <input class="contact-input-box" type="email" name="email" placeholder="Email"></input>
 </div>
     <div class="contact-or">or</div>
 <div class="row justify-centered">
-    <div class="icon sms-icon"></div>
+    <div class="sms-icon"></div>
     <input class="contact-input-box" type="text" name="phonenumber" placeholder="Phone Number"></input>
 </div>
     <div class="contact-or">or</div>
 <div class="row justify-centered">
-    <div class="icon yo-icon"></div>
+    <div class="yo-icon"></div>
     <input class="contact-input-box" type="text" name="yoname" placeholder="Yo Username"></input>
 </div>
 
