created a page for listing classes with free space

--- a/css/tutorifull.scss
+++ b/css/tutorifull.scss
@@ -321,6 +321,10 @@ caption {
     cursor: default;
 }
 
+.alert-classes tr {
+    cursor: default;
+}
+
 .alert-me-button {
     height: 40px;
     width: 200px;
