renamed success-confirm-classes to success-classes

--- a/templates/success.html
+++ b/templates/success.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 
-<div class="success-confirm-classes">
+<div class="success-classes">
     {% for course in courses %}
         <table class="course-table">
             <caption>
