--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -27,10 +27,12 @@
     </div>
 </div>
 
-<div class="search-parent">
-    <div class="search-icon"></div>
-    <input class="search-box" type="text" name="coursesearch" placeholder="Search for a course"></input>
-    <ul class="course-search-results"></ul>
+<div class="column cross-centered">
+    <div class="search-parent">
+        <div class="search-icon"></div>
+        <input class="search-box" type="text" name="coursesearch" placeholder="Search for a course"></input>
+        <ul class="course-search-results"></ul>
+    </div>
 </div>
 
 <div class="step">
