--- a/css/tutorifull.scss
+++ b/css/tutorifull.scss
@@ -43,12 +43,12 @@ body {
 
 h1 {
     margin: 0;
-    font-size: 2em;
+    font-size: 32px;
     font-weight: bold;
 }
 
 h2 {
-    font-size: 1.5em;
+    font-size: 24px;
     font-weight: bold;
 }
 
@@ -285,7 +285,6 @@ caption {
 
         td.class-status {
             width: 15%;
-            display: block;
         }
 
         td.class-location {
